--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,18 @@
 }
 @font-face {
   font-family:"OpenSans";
-  src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");
+  src: url(../fonts/OpenSans-Regular.woff);
   font-weight:400;
   font-style:normal;
 }
 @font-face {
   font-family:"OpenSans";
-  src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");
+  src: url(../fonts/OpenSans-Bold.woff);
   font-weight:700;
   font-style:normal;
 }
 body {
-  font-family:OpenSans, sans-serif;
+  font-family: "OpenSans", sans-serif;
 }
 .hidden {
   position: absolute;
@@ -30,7 +30,7 @@ body {
 /*-------------------------------HEADER-------------------------------*/
 .header{
   text-transform:uppercase;
-  background-image:url(https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg);
+  background-image:url(../images/banner-bg.jpg);
   background-size:cover;
   background-repeat:no-repeat;
   position:relative;
@@ -71,9 +71,9 @@ body {
   margin:107px auto 140px auto;
   text-align:center;
 }
-.header-menu{
-  /*padding-left:525px;*/
-}
+/*.header-menu{
+  padding-left:525px;
+}*/
 .menu-list{
   display:flex;
   list-style:none;
@@ -92,14 +92,14 @@ body {
 /*-------------------------------PAGE-------------------------------*/
 .page-container{
   display:flex;
-  width:1170px;
+  width: 1170px;
   margin-top:55px;
   margin-left:auto;
   margin-right:auto;
 }
-.page-main{
-  /*border:1px solid;*/
-}
+/*.page-main{
+  border:1px solid;
+}*/
 .post{
   display:flex;
   box-sizing:border-box;
@@ -321,7 +321,7 @@ body {
   border:1px solid #b59f5b;
 }
 .search-button{
-  background:url(https://netology-code.github.io/html-2-diploma/sources/images/search.svg);
+  background:url(../images/search.svg);
   background-position:center;
   background-color:#b59f5b;
   background-repeat:no-repeat;
@@ -413,13 +413,13 @@ body {
   margin-right:30px;
 }
 .social-icon_dribbble{
-  background-image:url(https://netology-code.github.io/html-2-diploma/sources/images/social/001-dribbble.svg);
+  background-image:url(../svg/001-dribbble.svg);
 }
 .social-icon_pinterest{
-  background-image:url(https://netology-code.github.io/html-2-diploma/sources/images/social/002-pinterest.svg);
+  background-image:url(../svg/002-pinterest.svg);
 }
 .social-icon_tumblr{
-  background-image:url(https://netology-code.github.io/html-2-diploma/sources/images/social/003-tumblr.svg);
+  background-image:url(../svg/003-tumblr.svg);
 }
 .acc-pic-first{
   height:20px;
@@ -435,4 +435,101 @@ body {
   font-size:12px;
   margin-bottom:41px;
   margin-top:74px;
+}
+/*--------------------MQ-DIPLOM----------------------*/
+.trends_container{
+display: flex;
+border: 1px solid red;
+justify-content: space-between;
+}
+.trends_title{
+font-weight: bold;
+font-size: 20px;
+text-align: center;
+margin: 60px auto auto auto;
+}
+.trends_title:after{
+  content:"";
+  display: block;
+  width: 65px;
+  height: 3px;
+  background-color:#e1d9bd;
+  margin: 15px auto 30px auto;
+}
+.trend_post{
+  width: calc((100%/4) - 5px);
+  display: flex;
+  padding: 10% 20px 12px 20px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  position:relative;
+  z-index:0;
+}
+.trend_post:after{
+  content:"";
+  background-color:#000000;
+  position:absolute;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  opacity:0.6;
+  z-index:-1;
+}
+.trend_tags{
+  display:flex;
+  justify-content:flex-start;
+  list-style:none;
+  text-transform:uppercase;
+}
+.trend_tag_link{
+  font-weight:bold;
+  font-size:14px;
+  color:#baa66a;
+  text-decoration:none;
+}
+.trend_tag:nth-child(n + 2) {
+  margin-left:19px;
+}
+.trend_post_grave{
+  background-image:url(../images/trend1.jpg);
+}
+.trend_post_cheese{
+  background-image:url(../images/trend2.jpg);
+}
+.trend_post_mountain{
+  background-image:url(../images/trend3.jpg);
+}
+.trend_post_orange{
+  background-image:url(../images/trend4.jpg);
+}
+.trend_info{
+  display: flex;
+  border: 3px solid #7a6b40;
+  align-content: flex-end;
+  flex-wrap: wrap;
+  padding: 10% 20px 12px 20px;
+}
+.trend_link{
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 24px;
+  text-transform: uppercase;
+  color: white;
+  width: auto;
+}
+/*********************SHOP**************************/
+.shop{
+  border: 1px solid black;
+}
+.shop_title{
+  text-align: center;
+}
+.shop_container{
+  /*border: 1px solid black;*/
+}
+.shop_post{=
+  width: calc((100%/4) - 5px);
 }
