--- a/css/style.css
+++ b/css/style.css
@@ -32,12 +32,17 @@ body {
   overflow: hidden;
 }
 
+.header-logo-mobile {
+  display: none;
+}
+
 /*------------------------HEADER-----------------------*/
 .header {
   text-transform: uppercase;
   background-image: url(../images/banner-bg.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center center;
   position: relative;
   z-index: 0;
   padding-bottom: 130px;
@@ -919,7 +924,7 @@ body {
   .header_burger:active {
 
     .straight:nth-child(1) {
-      transform: rotate(-45deg);
+      transform: rotate(45deg);
     }
 
     .straight:nth-child(2) {
@@ -1050,14 +1055,14 @@ body {
     margin-right: 3.12%;
   }
 
-.shop_title{
-  margin-top: -8px;
-}
+  .shop_title {
+    margin-top: -8px;
+  }
 
   .product_post {
     width: calc(100%/2 - 45px);
   }
-  
+
   .product_post:nth-child(3) {
     margin-top: 46px;
   }
@@ -1066,5 +1071,113 @@ body {
 
 /*-------------------------------MOBILE--------------------*/
 @media (max-width: 640px) {
+  /***************************HEADER***************/
+
+  .header {
+    background-image: url(../images/banner-mobile.jpg);
+  }
+
+  .header-container {
+    padding-bottom: 0;
+  }
+
+  .menu-list {
+    display: none;
+  }
+
+  .header-logo {
+    display: none;
+  }
+
+  .header-logo-mobile {
+    display: block;
+    max-width: 270px;
+    margin: 30% auto 7% auto;
+  }
+
+  .header-title {
+    font-size: 1.6em;
+    width: 280px;
+    margin-top: 0px;
+    margin-bottom: 1.5%;
+  }
+
+  /*******************TRENDS************/
+
+  .trends_container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .trend_post {
+    width: 100%;
+    margin-bottom: 1%;
+  }
+
+  /*******************PAGE*********************/
+  .page-container {
+    flex-wrap: wrap;
+    margin-top: 7%;
+  }
+
+  .page-main {
+    width: 100%;
+  }
+
+  .post {
+    display: block;
+    margin: 0 10%;
+  }
+
+  .post-image,
+  .info {
+    width: 100%;
+  }
+
+  .tags-img {
+    margin: 1% 0;
+  }
+
+  .date-and-author {
+    margin: 5% 0;
+  }
+
+  /**********************SIDE-BAR*************************/
+
+  .side-bar {
+    margin: 0 5%;
+    width: 100%;
+  }
+
+  .posts {
+    margin: auto;
+  }
+
+  .card {
+    width: 85%;
+  }
+
+  .search-text,
+  .search-label {
+    width: 100%;
+  }
+
+  .tags-list {
+    width: 100%;
+  }
+
+  /********SHOP***********************/
+
+  .shop_container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .product_post {
+    width: 100%;
+    margin-bottom: 15%;
+    margin-left: 5%;
+    margin-right: 5%;
+  }
 
 }
