--- a/css/style.css
+++ b/css/style.css
@@ -1067,12 +1067,32 @@ body {
     margin-top: 46px;
   }
 
+  @media (orientation: landscape) {
+
+    .trends_container {
+      flex-wrap: wrap;
+    }
+
+    .trends_title {
+      margin-top: 48px;
+      font-size: 1.1em;
+    }
+
+    .trends_title:after {
+      margin: 9px auto 19px auto;
+    }
+
+    .trend_post {
+      width: calc((100%/4) - 5px);
+      margin-bottom: 1%;
+      padding: 6% 20px 13px 20px;
+    }
+  }
+
 }
 
 /*-------------------------------MOBILE--------------------*/
 @media (max-width: 640px) {
-  /***************************HEADER***************/
-
   .header {
     background-image: url(../images/banner-mobile.jpg);
   }
@@ -1180,4 +1200,17 @@ body {
     margin-right: 5%;
   }
 
+
+  @media (orientation: landscape) {
+
+    .trends_container {
+      display: flex;
+      flex-wrap: wrap;
+    }
+
+    .trend_post {
+      width: calc(100%/2);
+      margin-bottom: 1%;
+    }
+  }
 }
