--- a/css/style.css
+++ b/css/style.css
@@ -687,11 +687,7 @@ body {
 }
 
 /*----------------------POPUP--------------------------*/
-.popup{
-  
-  display: none;
-}
-
+/*
 .popup {
   position: fixed;
   width: 100%;
@@ -860,7 +856,7 @@ body {
 .popup-off {
   display: none;
 }
-
+*/
 /*-----------------------------------------------------*/
 /*----------------БУРГЕР-МЕНЮ----------------------------*/
 .header_burger {
