--- a/css/style.css
+++ b/css/style.css
@@ -68,8 +68,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   max-width: 1170px;
-  padding-top: 45px;
-  padding-bottom: 12px;
+  padding: 45px 10px 12px 10px;
 }
 
 .header-logo {
@@ -112,6 +111,8 @@ body {
   margin-top: 62px;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .post {
@@ -205,7 +206,8 @@ body {
 
 /*-----------------------SIDE_BAR----------------------*/
 .side-bar {
-  margin-left: 120px;
+  margin-left: 100px;
+  margin-right: 245px;
   width: 286px;
 }
 
@@ -271,11 +273,15 @@ body {
 
 .search-text {
   padding: 0 15px;
-  width: 218px;
+  width: 100%;
   height: 48px;
   border: none;
   outline: none;
   background-color: #f4f7f6;
+}
+
+.search-label {
+  width: 100%;
 }
 
 .search-text:focus {
@@ -448,6 +454,8 @@ body {
 .footer-container {
   max-width: 1170px;
   margin: auto;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .footer-address {
@@ -564,6 +572,7 @@ body {
   justify-content: flex-start;
   list-style: none;
   text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
 .trend_tag_link {
@@ -621,6 +630,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .product_post {
@@ -684,7 +695,9 @@ body {
   font-size: 14px;
   color: #ffffff;
   text-transform: uppercase;
+  text-decoration: none;
 }
+
 
 /*----------------------POPUP--------------------------*/
 
@@ -956,9 +969,9 @@ body {
     flex-wrap: wrap;
   }
 
-  .trends_title {
+  .trend_link {
     margin-top: 48px;
-    font-size: 1.1em;
+    font-size: 17px;
   }
 
   .trends_title:after {
@@ -971,6 +984,10 @@ body {
     padding: 6% 20px 13px 20px;
   }
 
+  .trend_info {
+    padding: -30px;
+  }
+
   /*************************PAGE***************************/
 
   .page-container {
@@ -979,7 +996,7 @@ body {
 
   .page-main {
     width: 51.5%;
-    margin: 0px 4.5%;
+    margin: 0 30px;
   }
 
   .post {
@@ -992,6 +1009,7 @@ body {
   }
 
   .info {
+    width: 100%;
     margin-top: 5%;
   }
 
@@ -1025,7 +1043,7 @@ body {
   .side-bar {
     margin-left: 0px;
     width: 36.1%;
-    margin-right: 2%;
+    margin-right: 35px;
   }
 
   .card-title-link {
@@ -1036,8 +1054,8 @@ body {
   .shop_container {
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-left: 3.12%;
-    margin-right: 3.12%;
+    margin-left: 35px;
+    margin-right: 35px;
   }
 
   .shop_title {
@@ -1048,37 +1066,49 @@ body {
     width: calc(100%/2 - 45px);
   }
 
+  .product_post_img {
+    width: 100%;
+  }
+
+  .product_img {
+    width: 100%;
+  }
+
   .product_post:nth-child(3) {
     margin-top: 46px;
   }
 
-  @media (orientation: landscape) {
-
-    .trends_container {
-      flex-wrap: wrap;
-    }
-
-    .trends_title {
-      margin-top: 48px;
-      font-size: 1.1em;
-    }
-
-    .trends_title:after {
-      margin: 9px auto 19px auto;
-    }
-
-    .trend_post {
-      width: calc((100%/4) - 5px);
-      margin-bottom: 1%;
-      padding: 6% 20px 13px 20px;
-    }
+  .product_text {
+    margin: -10px 10px 0px 10px;
   }
-
-  .footer {
-    margin: 5% 5%;
-  }
-
 }
+
+@media (orientation: landscape) {
+
+  .trends_container {
+    flex-wrap: wrap;
+  }
+
+  .trends_title {
+    margin-top: 48px;
+    font-size: 1.1em;
+  }
+
+  .trends_title:after {
+    margin: 9px auto 19px auto;
+  }
+
+  .trend_post {
+    width: calc((100%/4) - 5px);
+    margin-bottom: 1%;
+    padding: 6% 20px 13px 20px;
+  }
+}
+
+.footer {
+  margin: 5% 5%;
+}
+
 
 /*-------------------------------MOBILE--------------------*/
 @media (max-width: 640px) {
@@ -1088,6 +1118,7 @@ body {
 
   .header-container {
     padding-bottom: 0;
+    flex-direction: column-reverse;
   }
 
   .menu-list {
@@ -1095,13 +1126,11 @@ body {
   }
 
   .header-logo {
-    display: none;
+    width: 268px;
   }
 
-  .header-logo-mobile {
-    display: block;
-    max-width: 270px;
-    margin: 45% auto 14% auto;
+  .header-logo {
+    margin: 0 0 40px 0;
   }
 
   .header-title {
@@ -1113,7 +1142,8 @@ body {
   }
 
   .header_burger {
-    margin: -18px 10px 0 0;
+    justify-content: space-between;
+    margin: -18px 10px 185px 90%;
   }
 
   /*******************TRENDS************/
@@ -1137,6 +1167,10 @@ body {
     height: 230px;
     width: 100%;
     margin-bottom: 1%;
+  }
+
+  .trend_info {
+    padding-left: 3px;
   }
 
   /*******************PAGE*********************/
@@ -1201,8 +1235,12 @@ body {
   .product_post {
     width: 100%;
     margin-bottom: 15%;
-    margin-left: 5%;
-    margin-right: 5%;
+    margin-left: 9px;
+    margin-right: 15px;
+  }
+
+  .product_img {
+    width: calc(100% - 35px);
   }
 
 
@@ -1218,4 +1256,8 @@ body {
       margin-bottom: 1%;
     }
   }
+}
+
+.popup {
+  display: none;
 }
